
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( cccc )
#add_subdirectory( cmockery2 )
#add_subdirectory( cppncss )
#add_subdirectory( gTest )
#add_subdirectory( oclint )


MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



