
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
add_subdirectory( Hash )
add_subdirectory( HashTable )
add_subdirectory( HashTableCpp )
add_subdirectory( LinkedListMemorySort )
#add_subdirectory( Matrix )
add_subdirectory( MergeSort )
add_subdirectory( Tree )
add_subdirectory( ZSort )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



