
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
add_subdirectory( Weather )
add_subdirectory( Astyle )

MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



