
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( webrtc )
#add_subdirectory( xmppp )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



