
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( libev )
add_subdirectory( ThreadPool )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



