
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( AVdecodeTest )
add_subdirectory( HttpFetcher )
#add_subdirectory( ipCamera )
#add_subdirectory( KeepingSettingModify )
add_subdirectory( LogC )
#add_subdirectory( Messages )
add_subdirectory( pCap )
#add_subdirectory( Threads )


MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



