
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( FatFs )
#add_subdirectory( LibUSB )
add_subdirectory( MountUSB )
#add_subdirectory( top )
#add_subdirectory( UsbDisk )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")


