
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
add_subdirectory( EasyBMP )
add_subdirectory( GIF )
add_subdirectory( lodePNG )
add_subdirectory( PicConversion )
add_subdirectory( TinyJPEG )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")


