
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( apache-lucy )
#add_subdirectory( CLucene )
#add_subdirectory( dpsearch )
#add_subdirectory( Webbench )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



