
########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
add_subdirectory( designMode )
add_subdirectory( inherited )



MESSAGE(status "Add sub-directory: ${CMAKE_CURRENT_SOURCE_DIR} .")



